[gd_scene load_steps=4 format=3 uid="uid://bnch2ki81nahy"]

[ext_resource type="Script" path="res://quests/dialog_system/dialog_system.gd" id="1_s8x7s"]
[ext_resource type="Theme" uid="uid://brysrba6aklkb" path="res://user_interface/base_theme.tres" id="2_udq3e"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_aswlb"]
size = Vector2(128, 128)

[node name="DialogSystem" type="CanvasLayer"]
script = ExtResource("1_s8x7s")
metadata/_edit_use_anchors_ = true

[node name="DialogPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 0.621914
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SimpleDialog" type="MarginContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_udq3e")

[node name="HBoxContainer" type="HBoxContainer" parent="DialogPanel/SimpleDialog"]
layout_mode = 2

[node name="CharacterPortrait" type="TextureRect" parent="DialogPanel/SimpleDialog/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_aswlb")
expand_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="DialogPanel/SimpleDialog/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel/SimpleDialog/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 0

[node name="SimpleDialogText" type="RichTextLabel" parent="DialogPanel/SimpleDialog/HBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_udq3e")
text = "There is an error, this should not be visible"
fit_content = true
scroll_following = true
